# my-podcasts

./: .envrc.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  devenv.nix  opencode.json  pyproject.toml  setup-git-hooks.sh
.beads/: beads.left.meta.json  config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/commands/: email-to-audio.md
.github/workflows/: ci.yaml
assets/podcast/: README.md
docs/plans/: 2026-02-28-silver-bulletin-design.md  2026-03-01-things-happen-digest.md  2026-03-02-things-happen-agent-design.md  2026-03-02-things-happen-agent-plan.md  2026-03-03-things-happen-multistage-design.md  2026-03-03-things-happen-multistage-plan.md  2026-03-05-shared-opencode-server-design.md  2026-03-05-shared-opencode-server-plan.md  2026-03-06-fp-digest-design.md  2026-03-06-fp-digest-plan.md  2026-03-07-pipeline-restructuring-design.md  2026-03-07-pipeline-restructuring-plan.md  2026-03-07-source-caching-catchup-design.md  2026-03-07-source-caching-catchup-plan.md  2026-03-07-zvi-source-design.md  2026-03-07-zvi-source-plan.md  2026-03-09-the-rundown-pivot-design.md  2026-03-09-the-rundown-pivot-plan.md  2026-03-10-rundown-non-interactive-plan.md  2026-03-11-show-notes-design.md  2026-03-11-show-notes-plan.md  2026-03-11-theme-rotation-design.md  2026-03-11-theme-rotation-plan.md  2026-03-13-publish-script-design.md  2026-03-13-publish-script-plan.md  2026-03-17-admin-cli-errored-jobs-plan.md  2026-03-17-daily-podcast-hardening-docs-plan.md  2026-03-17-daily-podcast-retry-backoff-plan.md  2026-03-17-deep-dives-archival-design.md  2026-03-17-deep-dives-archival-plan.md  2026-03-17-fp-digest-empty-writer-output-plan.md  2026-03-17-retry-cap-and-rundown-hardening-plan.md  2026-03-20-semafor-llm-routing-design.md  2026-03-20-semafor-llm-routing-plan.md  2026-03-29-aaronson-blog-podcast-design.md  2026-03-29-aaronson-blog-podcast-plan.md  2026-04-25-chinatalk-transcript-report-design.md  (+11 more)
email_processor/: README.md  __main__.py  api.py  email_processor.py  example_raw_email.txt  test_email_processor.py
openai_tts/: README.md  __main__.py
pipeline/: AGENTS.md  __main__.py  article_fetcher.py  arxiv.py  blog_poller.py  blog_sources.py  chinatalk_classifier.py  chinatalk_report.py  chinatalk_writer.py  consumer.py  db.py  document.py  exa_client.py  feed.py  fp_collector.py  fp_editor.py  fp_homepage_scraper.py  fp_processor.py  fp_writer.py  freshness.py  opencode_client.py  presets.py  processor.py  r2.py  report_writer.py  rss_sources.py  rundown_writer.py  script_processor.py  show_notes.py  source_adapters.py  source_cache.py  sources.py  substack.py  substack_writer.py  summarizer.py  test_article_fetcher.py  test_arxiv.py  test_blog_poller.py  test_chinatalk_classifier.py  test_chinatalk_report.py  (+55 more)
pipeline/fixtures/: arxiv_api.xml  (+1 more)
scripts/: simulate_fp_rotation.py
tts-joinery/: README.md
(+16 files in other folders)
