[project]
name = "my-podcasts"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_processor"]

[dependency-groups]
dev = [
    "flake8>=7.1.1",
    "pre-commit>=4.1.0",
    "flake8-type-checking>=3.0.0",
    "mypy>=1.14.1",
    "tts-joinery>=1.0.4",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0"
]
