[project]
name = "my-podcasts"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Mohrbacher",email = "johnnymo87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "boto3 (>=1.35.0)",
    "requests (>=2.32.0)",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["email_processor", "pipeline"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.1",
    "tts-joinery>=1.0.4",
    "types-beautifulsoup4>=4.12.0.20241020",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "audioop-lts>=0.2.2",
]

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
]
ignore = [
    "E203", # whitespace before ':'
    "TC002", # Move third-party import into type-checking block (requires careful handling)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E712"] # Allow e.g. `assert foo() == True` in test files
"email_processor/test_email_processor.py" = ["E501"] # Allow long test data lines

[tool.ruff.lint.isort]
# Configure isort to be compatible with black formatting
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
